--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon app.js"
     },
     "keywords": [],
     "author": "Viktor",
@@ -12,7 +12,18 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "body-parser": "^1.20.2",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongoose": "^7.4.1"
+        "joi": "^17.9.2",
+        "jsonwebtoken": "^9.0.1",
+        "mongodb": "^5.7.0",
+        "mongoose": "^7.4.1",
+        "multer": "^1.4.5-lts.1",
+        "nodeenv": "^3.0.75",
+        "passport": "^0.6.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
+        "uuid": "^9.0.0",
+        "winston": "^3.10.0"
     }
 }
